Update notebooks. Implement points schemes and placeholder for 2015 season.

--- a/docs/notebooks/Ergast_Database_Example.ipynb
+++ b/docs/notebooks/Ergast_Database_Example.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:482f353a4ef8c909d092beec7bb9ceded2f07d37fda85f449d66a368ab181228"
+  "signature": "sha256:e89341480659caac9cdaa40a2dde1ab6d535702b78d7a6a3bd1a579f44c66c46"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1932,25 +1932,219 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "b_drivers = SQL('mysql://ipython:ipythonnb@127.0.0.1:3306/formula1', 'races')"
+      "sql_drivers = SQL('mysql://ipython:ipythonnb@127.0.0.1:3306/formula1', 'drivers')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 25
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "drivers = Table(sql_drivers)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "drivers"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "ename": "TypeError",
-       "evalue": "Cannot create dshape from object of type <type 'NoneType'>",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-19-f4f8aea30bb9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mb_drivers\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSQL\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'mysql://ipython:ipythonnb@127.0.0.1:3306/formula1'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'races'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\blaze\\data\\sql.pyc\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, engine, tablename, primary_key, schema)\u001b[0m\n\u001b[0;32m    117\u001b[0m                                  % tablename)\n\u001b[0;32m    118\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 119\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_schema\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatashape\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mschema\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    120\u001b[0m         \u001b[0mmetadata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msql\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMetaData\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    121\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\datashape\\util.pyc\u001b[0m in \u001b[0;36mdshape\u001b[1;34m(o)\u001b[0m\n\u001b[0;32m     57\u001b[0m         \u001b[0mds\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcoretypes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataShape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     58\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 59\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Cannot create dshape from object of type %s'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     60\u001b[0m     \u001b[0mvalidate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     61\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mds\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mTypeError\u001b[0m: Cannot create dshape from object of type <type 'NoneType'>"
+       "html": [
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>driverId</th>\n",
+        "      <th>driverRef</th>\n",
+        "      <th>number</th>\n",
+        "      <th>code</th>\n",
+        "      <th>forename</th>\n",
+        "      <th>surname</th>\n",
+        "      <th>dob</th>\n",
+        "      <th>nationality</th>\n",
+        "      <th>url</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>0 </th>\n",
+        "      <td>  1</td>\n",
+        "      <td>   hamilton</td>\n",
+        "      <td> 44</td>\n",
+        "      <td> HAM</td>\n",
+        "      <td>     Lewis</td>\n",
+        "      <td>   Hamilton</td>\n",
+        "      <td> 1985-01-07</td>\n",
+        "      <td>  British</td>\n",
+        "      <td>       http://en.wikipedia.org/wiki/Lewis_Hamilton</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>1 </th>\n",
+        "      <td>  2</td>\n",
+        "      <td>   heidfeld</td>\n",
+        "      <td>NaN</td>\n",
+        "      <td> HEI</td>\n",
+        "      <td>      Nick</td>\n",
+        "      <td>   Heidfeld</td>\n",
+        "      <td> 1977-05-10</td>\n",
+        "      <td>   German</td>\n",
+        "      <td>        http://en.wikipedia.org/wiki/Nick_Heidfeld</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2 </th>\n",
+        "      <td>  3</td>\n",
+        "      <td>    rosberg</td>\n",
+        "      <td>  6</td>\n",
+        "      <td> ROS</td>\n",
+        "      <td>      Nico</td>\n",
+        "      <td>    Rosberg</td>\n",
+        "      <td> 1985-06-27</td>\n",
+        "      <td>   German</td>\n",
+        "      <td>         http://en.wikipedia.org/wiki/Nico_Rosberg</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3 </th>\n",
+        "      <td>  4</td>\n",
+        "      <td>     alonso</td>\n",
+        "      <td> 14</td>\n",
+        "      <td> ALO</td>\n",
+        "      <td>  Fernando</td>\n",
+        "      <td>     Alonso</td>\n",
+        "      <td> 1981-07-29</td>\n",
+        "      <td>  Spanish</td>\n",
+        "      <td>      http://en.wikipedia.org/wiki/Fernando_Alonso</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>4 </th>\n",
+        "      <td>  5</td>\n",
+        "      <td> kovalainen</td>\n",
+        "      <td>NaN</td>\n",
+        "      <td> KOV</td>\n",
+        "      <td>    Heikki</td>\n",
+        "      <td> Kovalainen</td>\n",
+        "      <td> 1981-10-19</td>\n",
+        "      <td>  Finnish</td>\n",
+        "      <td>    http://en.wikipedia.org/wiki/Heikki_Kovalainen</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>5 </th>\n",
+        "      <td>  6</td>\n",
+        "      <td>   nakajima</td>\n",
+        "      <td>NaN</td>\n",
+        "      <td> NAK</td>\n",
+        "      <td>    Kazuki</td>\n",
+        "      <td>   Nakajima</td>\n",
+        "      <td> 1985-01-11</td>\n",
+        "      <td> Japanese</td>\n",
+        "      <td>      http://en.wikipedia.org/wiki/Kazuki_Nakajima</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>6 </th>\n",
+        "      <td>  7</td>\n",
+        "      <td>   bourdais</td>\n",
+        "      <td>NaN</td>\n",
+        "      <td> BOU</td>\n",
+        "      <td> S\ufffdbastien</td>\n",
+        "      <td>   Bourdais</td>\n",
+        "      <td> 1979-02-28</td>\n",
+        "      <td>   French</td>\n",
+        "      <td> http://en.wikipedia.org/wiki/S%C3%A9bastien_Bo...</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>7 </th>\n",
+        "      <td>  8</td>\n",
+        "      <td>  raikkonen</td>\n",
+        "      <td>  7</td>\n",
+        "      <td> RAI</td>\n",
+        "      <td>      Kimi</td>\n",
+        "      <td>  R\ufffdikk\ufffdnen</td>\n",
+        "      <td> 1979-10-17</td>\n",
+        "      <td>  Finnish</td>\n",
+        "      <td> http://en.wikipedia.org/wiki/Kimi_R%C3%A4ikk%C...</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>8 </th>\n",
+        "      <td>  9</td>\n",
+        "      <td>     kubica</td>\n",
+        "      <td>NaN</td>\n",
+        "      <td> KUB</td>\n",
+        "      <td>    Robert</td>\n",
+        "      <td>     Kubica</td>\n",
+        "      <td> 1984-12-07</td>\n",
+        "      <td>   Polish</td>\n",
+        "      <td>        http://en.wikipedia.org/wiki/Robert_Kubica</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>9 </th>\n",
+        "      <td> 10</td>\n",
+        "      <td>      glock</td>\n",
+        "      <td>NaN</td>\n",
+        "      <td> GLO</td>\n",
+        "      <td>      Timo</td>\n",
+        "      <td>      Glock</td>\n",
+        "      <td> 1982-03-18</td>\n",
+        "      <td>   German</td>\n",
+        "      <td>           http://en.wikipedia.org/wiki/Timo_Glock</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>10</th>\n",
+        "      <td> 11</td>\n",
+        "      <td>       sato</td>\n",
+        "      <td>NaN</td>\n",
+        "      <td> SAT</td>\n",
+        "      <td>    Takuma</td>\n",
+        "      <td>       Sato</td>\n",
+        "      <td> 1977-01-28</td>\n",
+        "      <td> Japanese</td>\n",
+        "      <td>          http://en.wikipedia.org/wiki/Takuma_Sato</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 27,
+       "text": [
+        "    driverId   driverRef  number code   forename     surname         dob  \\\n",
+        "0          1    hamilton      44  HAM      Lewis    Hamilton  1985-01-07   \n",
+        "1          2    heidfeld     NaN  HEI       Nick    Heidfeld  1977-05-10   \n",
+        "2          3     rosberg       6  ROS       Nico     Rosberg  1985-06-27   \n",
+        "3          4      alonso      14  ALO   Fernando      Alonso  1981-07-29   \n",
+        "4          5  kovalainen     NaN  KOV     Heikki  Kovalainen  1981-10-19   \n",
+        "5          6    nakajima     NaN  NAK     Kazuki    Nakajima  1985-01-11   \n",
+        "6          7    bourdais     NaN  BOU  S\ufffdbastien    Bourdais  1979-02-28   \n",
+        "7          8   raikkonen       7  RAI       Kimi   R\ufffdikk\ufffdnen  1979-10-17   \n",
+        "8          9      kubica     NaN  KUB     Robert      Kubica  1984-12-07   \n",
+        "9         10       glock     NaN  GLO       Timo       Glock  1982-03-18   \n",
+        "10        11        sato     NaN  SAT     Takuma        Sato  1977-01-28   \n",
+        "\n",
+        "   nationality                                                url  \n",
+        "0      British        http://en.wikipedia.org/wiki/Lewis_Hamilton  \n",
+        "1       German         http://en.wikipedia.org/wiki/Nick_Heidfeld  \n",
+        "2       German          http://en.wikipedia.org/wiki/Nico_Rosberg  \n",
+        "3      Spanish       http://en.wikipedia.org/wiki/Fernando_Alonso  \n",
+        "4      Finnish     http://en.wikipedia.org/wiki/Heikki_Kovalainen  \n",
+        "5     Japanese       http://en.wikipedia.org/wiki/Kazuki_Nakajima  \n",
+        "6       French  http://en.wikipedia.org/wiki/S%C3%A9bastien_Bo...  \n",
+        "7      Finnish  http://en.wikipedia.org/wiki/Kimi_R%C3%A4ikk%C...  \n",
+        "8       Polish         http://en.wikipedia.org/wiki/Robert_Kubica  \n",
+        "9       German            http://en.wikipedia.org/wiki/Timo_Glock  \n",
+        "..."
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
