Some additional analysis of lap times.

--- a/docs/notebooks/Data Analysis with Ergast API Example.ipynb
+++ b/docs/notebooks/Data Analysis with Ergast API Example.ipynb
@@ -127,42 +127,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>  hamilton</td>\n",
-       "      <td> 1</td>\n",
-       "      <td> 1</td>\n",
-       "      <td> 101.390</td>\n",
+       "      <td>hamilton</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101.390</td>\n",
        "      <td>00:01:41.390000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>    vettel</td>\n",
-       "      <td> 1</td>\n",
-       "      <td> 2</td>\n",
-       "      <td> 102.217</td>\n",
+       "      <td>vettel</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>102.217</td>\n",
        "      <td>00:01:42.217000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td> raikkonen</td>\n",
-       "      <td> 1</td>\n",
-       "      <td> 3</td>\n",
-       "      <td> 102.896</td>\n",
+       "      <td>raikkonen</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>102.896</td>\n",
        "      <td>00:01:42.896000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>   rosberg</td>\n",
-       "      <td> 1</td>\n",
-       "      <td> 4</td>\n",
-       "      <td> 103.381</td>\n",
+       "      <td>rosberg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>103.381</td>\n",
        "      <td>00:01:43.381000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>    bottas</td>\n",
-       "      <td> 1</td>\n",
-       "      <td> 5</td>\n",
-       "      <td> 104.432</td>\n",
+       "      <td>bottas</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>104.432</td>\n",
        "      <td>00:01:44.432000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -234,10 +234,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11003abd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x168339e8>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -665,7 +665,7 @@
        "SWoJk3hJkiRJklrCJF6SJEmSpJYwiZckSZIkqSX+P97Dy5uA/J37AAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x11176fc90>"
+       "<matplotlib.figure.Figure at 0x16833710>"
       ]
      },
      "metadata": {},
@@ -677,15 +677,6 @@
     "ids = [str(item) for item in ids]\n",
     "sns.boxplot(df.seconds, df.driverId, names=ids, order=ids, vert=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
